# miro-boost

./: README.md  biome.jsonc  package-lock.json
.devcontainer/: devcontainer.json  postCreate.sh  postStart.sh
.devcontainer/features/npm/: devcontainer-feature.json  install.sh
.github/: copilot-instructions.md  design-token.md  pandacss.md  serendie.md  token-list.md
.github/instructions/: 11-components.instructions.md  12-design-token.instructions.md  13-icons.instructions.md  20-backend.instructions.md  components.instructions.md  design-token.instructions.md  frontend.instructions.md  general.instructions.md  serendie-icons.instructions.md  ui-styling.instructions.md
backend/: .env.sample  .gitignore  main.py  pyproject.toml  requirements.txt
backend/db/: user_sessions.sqlite3
backend/miro_boost/: __init__.py
backend/miro_boost/api/: __init__.py  group.py  oauth.py  sticky_note.py  task.py
backend/miro_boost/chain/: base.py  extract_tasks.py  group_sticky_notes.py  random_sticky_notes.py
backend/miro_boost/common/: __init__.py  logger.py  settings.py
backend/miro_boost/db/: __init__.py  session.py  sqlite_storage.py
backend/miro_boost/util/: __init__.py
backend/miro_boost/util/miro/: __init__.py  sticky_notes.py
backend/package/api/: __init__.py  group.py  layout.py  oauth.py  sticky_note.py  task.py
backend/package/chain/: base.py  extract_tasks.py  group_sticky_notes.py  random_sticky_notes.py
backend/package/common/: __init__.py  settings.py
backend/package/db/: __init__.py  session.py  session.py.bak  sqlite_storage.py
backend/package/util/: layout_sticky_notes.py
backend/package/util/miro/: __init__.py  sticky_notes.py
backend/tests/: debug_overlap.py  final_improvements_summary.py  show_improvements.py  test_api_integration.py  test_chain_debug.py  test_connector_improvements.py  test_group_debug.py  test_horizontal_layout.py  test_layout_api.py  test_minimal_langchain.py  test_prompt_debug.py  test_semantic_grouping.py  test_simple_prompt.py  test_todo_functions.py
backup/: index.html  package-lock.json  package.json  panda.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
backup/src/: App.tsx  Miro.tsx  index.css  main.tsx
backup/src/bak/: App.tsx.bak
backup/src/components/: MiroSDKInit.tsx
frontend/: .gitignore  README.md  biome.jsonc  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: style.css
frontend/src/: App.tsx  main.tsx
frontend/src/api/: oauth.ts
frontend/src/api/auth/: oauth.ts
frontend/src/api/miro-sdk/: StickyNote.ts
frontend/src/assets/: mirotone.css  style.css  title.css
frontend/src/components/: FetchStickyNotes.tsx  FileDialog.tsx
frontend/src/components/dialog/: FileDialog.tsx  index.ts
frontend/src/components/typography/: Body.tsx  Display.tsx  Headline.tsx  Label.tsx  Title.tsx  index.css  index.ts
frontend/src/features/Miro/: DemoTab.tsx  GenericTab.tsx  ScrumTab.tsx
frontend/src/features/feature_a/: FeatureA1.tsx
frontend/src/pages/: App.tsx  Miro.tsx  Miro1.tsx  Root.tsx  Splash.tsx
frontend/src/pages/auth/: Auth0Start.tsx  Auth1Signin.tsx  Auth2Signed.tsx  Auth3Check.tsx  Check.tsx  Signed.tsx  Signin.tsx
frontend/src/pages/config/: Config.tsx
frontend/src/pages/miro/: 0-Typography.tsx  1-Group.tsx  1-GroupCheck.tsx  2-Task.tsx  2-TaskCheck.tsx  3-Demo.tsx
frontend/src/pages/miro/demo/: Typography.tsx
frontend/src/pages/miro/feature_a/: 1-Group.tsx  1-GroupCheck.tsx  2-Task.tsx  2-TaskCheck.tsx  3-Demo.tsx
frontend/src/styles/: Body.tsx  Display.tsx  Headline.tsx  Label.tsx  Title.tsx  index.ts
